--- a/FallingBricks2/FallingBricks2.csproj
+++ b/FallingBricks2/FallingBricks2.csproj
@@ -53,17 +53,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Colour.cs" />
-    <Compile Include="L.cs" />
-    <Compile Include="Line.cs" />
-    <Compile Include="Point.cs" />
-    <Compile Include="S.cs" />
-    <Compile Include="Shape.cs" />
+    <Compile Include="Model\Colour.cs" />
+    <Compile Include="Model\Shapes\L.cs" />
+    <Compile Include="Model\Shapes\Line.cs" />
+    <Compile Include="Model\Point.cs" />
+    <Compile Include="Model\Shapes\S.cs" />
+    <Compile Include="Model\Shape.cs" />
+    <Compile Include="Model\UI\OverlayUserControl.cs" />
     <Compile Include="ShapeFactory.cs" />
-    <Compile Include="Square.cs" />
-    <Compile Include="T.cs" />
-    <Compile Include="Tile.cs" />
-    <Page Include="MainWindow.xaml">
+    <Compile Include="Model\Shapes\Square.cs" />
+    <Compile Include="Model\Shapes\T.cs" />
+    <Compile Include="Model\Tile.cs" />
+    <Page Include="View\GameView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -71,7 +76,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\GameView.xaml.cs">
+      <DependentUpon>GameView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -103,6 +111,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
