Collision detection for fallen shapes

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -61,6 +61,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CollisionDetectorFixture.cs" />
+    <Compile Include="SquareFixture.cs" />
     <Compile Include="LineFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
