--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -61,6 +61,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CollisionDetectorFixture.cs" />
+    <Compile Include="ShapeSFixture.cs" />
+    <Compile Include="ShapeZFixture.cs" />
     <Compile Include="ShapeTFixture.cs" />
     <Compile Include="ShapeLFixture.cs" />
     <Compile Include="ShapeJFixture.cs" />
