--- a/FallingBricks2/FallingBricks2.csproj
+++ b/FallingBricks2/FallingBricks2.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Controller\CollisionDetector.cs" />
+    <Compile Include="Controller\ScoreHolder.cs" />
     <Compile Include="Controller\FallenTiles.cs" />
     <Compile Include="Controller\GameGridController.cs" />
     <Compile Include="Controller\GameTimer.cs" />
